# megahit_test

./: CMakeLists.txt  README.md  common_functions.cpp  common_functions.h  defination.h  kmer.cpp  kmer.h  main.cpp  main_funcitons.cpp  main_functions.h  rank_list.cpp  rank_list.h  read.cpp  read.h  select_list.cpp  select_list.h  succinctDBG.cpp  succinctDBG.h
